fix title overflow

--- a/pub/less/thingler.less
+++ b/pub/less/thingler.less
@@ -128,6 +128,26 @@ ul {
         text-decoration: none;
         display: inline-block;
         line-height: @item-height;
+        overflow: hidden;
+        position: relative;
+        white-space: nowrap;
+    }
+    label {
+        width: 670px;
+    }
+    label:after {
+        content: " ";
+        padding: 1px;
+        z-index: 10;
+        position: absolute;
+        top: 0;
+        right: -15px;
+        width: 30px;
+        height: @item-height;
+        display: block;
+        line-height: @item-height;
+        background-color: white;
+        .box-shadow(-15px, 0px, 30px, white);
     }
     ul { margin: 30px 0; width: @page-width; padding: 0; }
     li {
@@ -141,6 +161,10 @@ ul {
             background-color: @yellow;
             .actions {
                 visibility: visible;
+            }
+            label:after {
+                background-color: @yellow;
+                .box-shadow(-15px, 0px, 30px, @yellow);
             }
         }
         input {
